--- a/Contacto.html
+++ b/Contacto.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!--bootstrap-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
@@ -12,95 +16,87 @@
 
 <!-- Menú de navegación-->
 
-    <header class="header">
-         <div class="header-logo">
-        <img src="Logos/Logo2.png" width="250,3" height="54,6" alt="logo">
-             <p>Productora audiovisual</p>
-         </div>
-        <nav class="navHeader">
-           
-            <ul class="menu">
-                <li>
-                    <a href="index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="Servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="Proyectos.html">Proyectos</a>
-                </li>
-                <li>
-                    <a href="Nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="Contacto.html">Contacto</a>
-                </li>
-
-            </ul>
-        </nav>
+<header>
+    <nav class="navbar py-4 navbar-expand-lg navbar-dark backgroundNav">
+        <div class="container-fluid navMargin">
+          <a class="navbar-brand marginLogo">
+            <img src="logos/Logo2.png" width="60%" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="enlace nav-link m-2 fs-5" aria-current="page" href="index.html">Inicio</a>
+              <a class="enlace nav-link m-2 fs-5" href="Servicios.html">Servicios</a>
+              <a class="enlace nav-link m-2 fs-5" href="Proyectos.html">Proyectos</a>
+              <a class="enlace nav-link m-2 fs-5" href="Nosotros.html">Nosotros</a>
+              <a class="enlace nav-link m-2 fs-5" href="Contacto.html">Contacto</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
 <!--cuerpo-->
 
-<body>
+
     <section class="sectionContacto">
         <div>
             <br>
             <br>
-            <h1>
+            <h3 class="contactanos">
                 Contactanos
-            </h1>
-            <br>
-            <h2>
-                No dudes en contarnos tu proyecto  
-            </h2>
-            <br>
-            <h3>
-                También podes contactarnos a través de nuestras redes y venir a conocernos personalmente a nuestras oficinas.
             </h3>
+            <br>
+            <h4>
+                No dudes en contarnos tu proyecto  
+            </h4>
+            <br>
+            <h5>
+                También podes contactarnos a través de nuestras redes y venir a conocernos personalmente a nuestras oficinas.
+            </h5>
             <br>
         </div>
         <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7792.285284742666!2d-58.38824586542324!3d-34.79959179024635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1662320764643!5m2!1ses-419!2sar" width="1080" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
-</body>
+
 
 <!--Pie de pagina-->
 
-    <footer class="footer">
-        <div class="divTexto">
+<footer>
+  
+  <div class="container-fluid marginFooter">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-4 footerizquierdo">
             <ul class="footerTexto">
-                   <li> © Horizontal - Productora audiovisual</li>
-                    <li>Todos los derechos reservados</li> 
-                    <li> Email: produccioneshorizontal@hz.com.ar</li>
-                    <li>Tel: +549 11 5555 4321</li>
-            </ul>
+              <li> © Horizontal - Productora audiovisual</li>
+               <li>Todos los derechos reservados</li> 
+               <li> Email: produccioneshorizontal@hz.com.ar</li>
+               <li>Tel: +549 11 5555 4321</li>
+       </ul>
+          </div>
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4 iconosFooter">
+            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+          </div>
         </div>
-        <div class="footerSeparador">
-            <ul class="puntosSeparador">
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-            </ul>
-        </div>
-        <div class="divRedes">
-            <ul class="redes">
-                <li>
-                    <a href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" width="30%"alt="youtube"></a> 
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" width="30%" alt="instagram"></a>
-                </li>
-                <li>
-                   <a href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" width="30%" alt="telegram"></a>
-                </li>
-                <li>
-                  <a href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" width="30%" alt="vimeo"></a>
-                </li>
-            </ul>  
-        </div>
-    </footer>
+      </div>
+    </div>
+  </div>
+
+</footer>
+ <!--Script js-->
+
+ <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
