--- a/Servicios.html
+++ b/Servicios.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
 </head>
@@ -12,115 +17,126 @@
 
 <!-- Menú de navegación-->
 
-    <header class="header">
-         <div class="header-logo">
-        <img src="Logos/Logo2.png" width="250,3" height="54,6" alt="logo">
-             <p>Productora audiovisual</p>
-         </div>
-        <nav class="navHeader">
-           
-            <ul class="menu">
-                <li>
-                    <a href="index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="Servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="Proyectos.html">Proyectos</a>
-                </li>
-                <li>
-                    <a href="Nosotros.html">Nosotros</a>
-                </li>
-                <li>
-                    <a href="Contacto.html">Contacto</a>
-                </li>
-
-            </ul>
-        </nav>
+<header>
+    <nav class="navbar py-4 navbar-expand-lg navbar-dark backgroundNav">
+        <div class="container-fluid navMargin">
+          <a class="navbar-brand marginLogo">
+            <img src="logos/Logo2.png" width="60%" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="enlace nav-link m-2 fs-5" aria-current="page" href="index.html">Inicio</a>
+              <a class="enlace nav-link m-2 fs-5" href="Servicios.html">Servicios</a>
+              <a class="enlace nav-link m-2 fs-5" href="Proyectos.html">Proyectos</a>
+              <a class="enlace nav-link m-2 fs-5" href="Nosotros.html">Nosotros</a>
+              <a class="enlace nav-link m-2 fs-5" href="Contacto.html">Contacto</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
 <!--Cuerpo-->
 
-<section class="sectionServicios">
+ <section class="sectionServicios">
     <div class="serviciosBanner">
-        <h3 class="serviciosTexto">
+        <h6 class="serviciosTexto">
             Creamos y ayudamos a gestionar los distintos procesos que conforman la producción de contenido audiovisual, centrándonos en estándares artísticos y comerciales de alta calidad, y adaptándonos de manera óptima a los distintos ámbitos y proyectos. No dudes en contarnos tu proyecto.
-        </h3>
-        <img src="Imagenes/Servicios1b.jpg" width="95%" alt="banner">
-    </div> 
-</section>
-<section class="sectionServicios">
-    <div>
-        <h3>
-            Fotografia y video Integral
-        </h3>
-        <p>
-            Abarcamos la fotografía, filmación y grabación sonora para piezas publicitarias, institucionales y artísticas. Diseñamos los guiones conjuntamente y proyectamos tus ideas desde el momento cero, y las llevamos al plano digital a través de equipamiento de alta definición.
-        </p>
+        </h6>
+         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Imagenes/Servicios1c.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Imagenes/Servicios1b.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="Imagenes/Servicios1d.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
     </div>
-    <div>
-        <img src="Imagenes/Servicios2.jpg" width="85%" alt="camara">
-    </div>
-</section>
-<section class="sectionServicios">
-    <div>
-        <img src="imagenes/Servicios3.jpg" width="85%" alt="edicion">
-    </div>
-    <div>
-        <h3>Edición y diseño digital</h3>
-        <p>
-            Damos forma al crudo de los contenidos para generar un material finiquitado y creamos de manera enteramente digital piezas de impacto a través de animación y motion graphics. Te entregamos un contenido listo para insertarse a través de las distintas plataformas y medios de difusión.
-        </p>
-    </div>
-</section>
-<section class="sectionServicios">
-    <div>
-        <img src="imagenes/Servicios4.jpg" width=85% alt="consola">
-    </div>
-    <div>
-        <h3>Post producción de audio</h3>
-        <p>
-            Ayudamos a plasmar tus ideas artísticas al plano sonoro digital, enfocándonos en lograr piezas que otorgen identidad a tu producto o marca, y que se adapten a los actuales requirimientos de consenso colectivo para radiofonía y streaming.
-        </p>
-    </div>
-</section>
+    </section>
+
+<div class="container-fluid">
+	<div class="row fila">
+		<div class="col-md-6">
+      <h5>
+        Fotografia y video Integral
+      </h5>
+      <p>
+        Abarcamos la fotografía, filmación y grabación sonora para piezas publicitarias, institucionales y artísticas. Diseñamos los guiones conjuntamente y proyectamos tus ideas desde el momento cero, y las llevamos al plano digital a través de equipamiento de alta definición.
+      </p>
+		</div>
+		<div class="col-md-6">
+      <img src="Imagenes/Servicios2.jpg" width="85%" alt="camara">
+		</div>
+	</div>
+	<div class="row fila">
+		<div class="col-md-6">
+      <img src="imagenes/Servicios3.jpg" width="85%" alt="edicion">
+		</div>
+		<div class="col-md-6">
+      <h5>
+        Edición y diseño digital
+      </h5>
+      <p>
+          Damos forma al crudo de los contenidos para generar un material finiquitado y creamos de manera enteramente digital piezas de impacto a través de animación y motion graphics. Te entregamos un contenido listo para insertarse a través de las distintas plataformas y medios de difusión.
+      </p>
+		</div>
+	</div>
+	<div class="row fila">
+		<div class="col-md-6">
+      <img src="imagenes/Servicios4.jpg" width=85% alt="consola">
+		</div>
+		<div class="col-md-6">
+      <h5>Post producción de audio</h5>
+      <p>
+          Ayudamos a plasmar tus ideas artísticas al plano sonoro digital, enfocándonos en lograr piezas que otorgen identidad a tu producto o marca, y que se adapten a los actuales requirimientos de consenso colectivo para radiofonía y streaming.
+      </p>
+		</div>
+	</div>
+</div>
 
 <!--Pie de pagina-->
 
-    <footer class="footer">
-        <div class="divTexto">
+
+<footer>
+  
+  <div class="container-fluid marginFooter">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-4 footerizquierdo">
             <ul class="footerTexto">
-                   <li> © Horizontal - Productora audiovisual</li>
-                    <li>Todos los derechos reservados</li> 
-                    <li> Email: produccioneshorizontal@hz.com.ar</li>
-                    <li>Tel: +549 11 5555 4321</li>
-            </ul>
+              <li> © Horizontal - Productora audiovisual</li>
+               <li>Todos los derechos reservados</li> 
+               <li> Email: produccioneshorizontal@hz.com.ar</li>
+               <li>Tel: +549 11 5555 4321</li>
+       </ul>
+          </div>
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4 iconosFooter">
+            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+          </div>
         </div>
-        <div class="footerSeparador">
-            <ul class="puntosSeparador">
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-                <li><b>•</b></li>
-            </ul>
-        </div>
-        <div class="divRedes">
-            <ul class="redes">
-                <li>
-                    <a href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" width="30%"alt="youtube"></a> 
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" width="30%" alt="instagram"></a>
-                </li>
-                <li>
-                   <a href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" width="30%" alt="telegram"></a>
-                </li>
-                <li>
-                  <a href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" width="30%" alt="vimeo"></a>
-                </li>
-            </ul>  
-        </div>
-    </footer>
+      </div>
+    </div>
+  </div>
+
+</footer>
+
+    <!--Script js-->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
