--- a/Proyectos.html
+++ b/Proyectos.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--bootstrap-->
+    <meta name="description" content="Productora argentina enfocada en la creación de contenidos audiovisuales artísticos y publicitarios multiplataforma. Expandimos tus ideas a través de la imagen y el sonido.">
+    <meta name="keywords" content="proyectos, video, producción, audiovisual, contenidos, digital, cinematográfica, música, animación, 3D, motion, graphics, arte, publicidad, filmación, grabación, edición, tecnología, imagen, sonido, streaming"> 
+
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Horizontal | Productora Audiovisual">
+    <meta property="og:url" content="https://...">
+    <meta property="og:image" content="https://...">
+
+    <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
 </head>
@@ -41,22 +50,35 @@
 <!--Cuerpo-->
 
 
-    <section class="sectionProyectos">
-        <div class="divProyectos">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-        </div>
-        <div class="divProyectos">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-        </div>
-        <div class="divProyectos">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-            <img class="previewVideo" src="imagenes/Proyectos.png" width="30%" alt="">
-        </div>
-    </section>
+<div class="container-fluid contenedorProyectos">
 
+	<div class="row">
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra"  src="https://www.youtube.com/embed/IsQj_RRNZnU" title="Show en vivo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra"  src="https://www.youtube.com/embed/ipTXmBa8-Zc" title="Footage ciudad" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+	</div>
 
+	<div class="row">
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra" src="https://www.youtube.com/embed/F40lUwCvXiQ" title="Videoclip musical" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra" src="https://www.youtube.com/embed/LcF6ut-1M94" title="Animación 3D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra" src="https://www.youtube.com/embed/6rjTMdi37Kc" title="filmación paisaje" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+		<div class="col-md-6 previewProyectos">
+      <iframe class="imagenSombra" src="https://www.youtube.com/embed/QMA3WH-slWE" title="Animación 3D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+		</div>
+	</div>
+</div>
 
 <!--Pie de pagina-->
 
@@ -77,10 +99,10 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-4 iconosFooter">
-            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
-              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
-              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
-              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
           </div>
         </div>
       </div>
