--- a/Contacto.html
+++ b/Contacto.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Productora argentina enfocada en la creación de contenidos audiovisuales artísticos y publicitarios multiplataforma. Expandimos tus ideas a través de la imagen y el sonido.">
+    <meta name="keywords" content="contacto, redes, oficina, ubicación, producción, audiovisual, contenidos, digital, cinematográfica, música, animación, 3D, motion, graphics, arte, publicidad, filmación, grabación, edición, tecnología, imagen, sonido, streaming"> 
 
-    <link rel="stylesheet" href="style.css">
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Horizontal | Productora Audiovisual">
+    <meta property="og:url" content="https://...">
+    <meta property="og:image" content="https://...">
+
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style.css">
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
 </head>
@@ -58,10 +67,11 @@
             </h5>
             <br>
         </div>
-        <div class="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7792.285284742666!2d-58.38824586542324!3d-34.79959179024635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1662320764643!5m2!1ses-419!2sar" width="1080" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+       <div class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7792.285284742666!2d-58.38824586542324!3d-34.79959179024635!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1662320764643!5m2!1ses-419!2sar" width="1000" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div> 
     </section>
+
 
 
 <!--Pie de pagina-->
@@ -83,10 +93,10 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-4 iconosFooter">
-            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
-              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
-              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
-              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
           </div>
         </div>
       </div>
