--- a/Nosotros.html
+++ b/Nosotros.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--bootstrap-->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="description" content="Productora argentina enfocada en la creación de contenidos audiovisuales artísticos y publicitarios multiplataforma. Expandimos tus ideas a través de la imagen y el sonido.">
+    <meta name="keywords" content="equipo, trabajo, producción, audiovisual, contenidos, digital, cinematográfica, música, animación, 3D, motion, graphics, arte, publicidad, filmación, grabación, edición, tecnología, imagen, sonido, streaming"> 
 
-    <link rel="stylesheet" href="style.css">
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Horizontal | Productora Audiovisual">
+    <meta property="og:url" content="https://...">
+    <meta property="og:image" content="https://...">
+
+    <!--bootstrap-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/style.css">
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
 </head>
@@ -43,11 +52,12 @@
 
     <section class="sectionNosotros">
     <div>
-        <img src="imagenes/Nosotros.jpg" width="80%" alt="nosotros">
+        <img class="imagenSombra" src="imagenes/Nosotros.jpg" width="80%" alt="Equipo de trabajo">
     </div>
     <div>
-        <h4>Quiénes somos</h4>
-        <hr>
+        <h4>
+          Quiénes somos</h4>
+        <hr style="width:35px;">
         <h6>
             Somos un empresa joven puesta en marcha en Septiembre de 2022, radicada en en el sur del Gran Buenos Aires y dispuesta a brindar servicios a cualquier parte del territorio. Teniendo como premisa el preponderamiento de los conceptos esteticos fundamentales del arte audiovisual, buscamos llevar nuestros conocimentos a la generacion de proyectos que excedan y trasciendan estos conceptos fundacionales. El enfoque es la adopcion de ideas y aspiraciones mutuas con las empresas o individuos que depositan su confianza en nosotros.
         </h6>
@@ -75,10 +85,10 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-4 iconosFooter">
-            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
-              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
-              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
-              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
           </div>
         </div>
       </div>
