--- a/Servicios.html
+++ b/Servicios.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="description" content="Productora argentina enfocada en la creación de contenidos audiovisuales artísticos y publicitarios multiplataforma. Expandimos tus ideas a través de la imagen y el sonido.">
+    <meta name="keywords" content="Servicios, producción, audiovisual, contenidos, digital, cinematográfica, música, animación, 3D, motion, graphics, arte, publicidad, filmación, grabación, edición, tecnología, imagen, sonido, streaming"> 
+
+    <!--Protocolo Open Graph-->
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Horizontal | Productora Audiovisual">
+    <meta property="og:url" content="https://...">
+    <meta property="og:image" content="https://...">
+
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Horizontal | Productora Audiovisual</title>
     <link rel="shortcut icon" href="Logos/Favicon.png">
 </head>
@@ -46,16 +56,16 @@
         <h6 class="serviciosTexto">
             Creamos y ayudamos a gestionar los distintos procesos que conforman la producción de contenido audiovisual, centrándonos en estándares artísticos y comerciales de alta calidad, y adaptándonos de manera óptima a los distintos ámbitos y proyectos. No dudes en contarnos tu proyecto.
         </h6>
-         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+         <div id="carouselExampleSlidesOnly" class="carousel slide imagenSombra" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Imagenes/Servicios1c.jpg" class="d-block w-100" alt="...">
+            <img src="Imagenes/Servicios1c.jpg" class="d-block w-100" alt="Producción audiovisual integral">
           </div>
           <div class="carousel-item">
-            <img src="Imagenes/Servicios1b.jpg" class="d-block w-100" alt="...">
+            <img src="Imagenes/Servicios1b.jpg" class="d-block w-100" alt="Producción audiovisual integral">
           </div>
           <div class="carousel-item">
-            <img src="Imagenes/Servicios1d.jpg" class="d-block w-100" alt="...">
+            <img src="Imagenes/Servicios1d.jpg" class="d-block w-100" alt="Producción audiovisual integral">
           </div>
         </div>
       </div>
@@ -64,7 +74,7 @@
 
 <div class="container-fluid">
 	<div class="row fila">
-		<div class="col-md-6">
+		<div data-aos="zoom-in-right" class="col-md-6">
       <h5>
         Fotografia y video Integral
       </h5>
@@ -73,14 +83,14 @@
       </p>
 		</div>
 		<div class="col-md-6">
-      <img src="Imagenes/Servicios2.jpg" width="85%" alt="camara">
+      <img class="imagenSombra" src="Imagenes/Servicios2.jpg" width="85%" alt="Cámara cinematográfica">
 		</div>
 	</div>
 	<div class="row fila">
 		<div class="col-md-6">
-      <img src="imagenes/Servicios3.jpg" width="85%" alt="edicion">
+      <img class="imagenSombra" src="imagenes/Servicios3.jpg" width="85%" alt="Edicion digital">
 		</div>
-		<div class="col-md-6">
+		<div data-aos="zoom-in-left" class="col-md-6">
       <h5>
         Edición y diseño digital
       </h5>
@@ -91,9 +101,9 @@
 	</div>
 	<div class="row fila">
 		<div class="col-md-6">
-      <img src="imagenes/Servicios4.jpg" width=85% alt="consola">
+      <img class="imagenSombra" src="imagenes/Servicios4.jpg" width=85% alt="Consola de audio">
 		</div>
-		<div class="col-md-6">
+		<div data-aos="zoom-in-left" class="col-md-6">
       <h5>Post producción de audio</h5>
       <p>
           Ayudamos a plasmar tus ideas artísticas al plano sonoro digital, enfocándonos en lograr piezas que otorgen identidad a tu producto o marca, y que se adapten a los actuales requirimientos de consenso colectivo para radiofonía y streaming.
@@ -122,10 +132,10 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-4 iconosFooter">
-            <a class="icono nav-link m-3" href="https://www.youtube.com/"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
-              <a class="icono nav-link m-3 " href="https://www.instagram.com/"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
-              <a class="icono nav-link m-3" href="https://web.telegram.org/"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
-              <a class="icono nav-link m-3" href="https://vimeo.com/"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
           </div>
         </div>
       </div>
@@ -134,7 +144,18 @@
 
 </footer>
 
+<script>
+  AOS.init();
+</script>
+
     <!--Script js-->
+
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
