--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar py-4 navbar-expand-lg navbar-dark backgroundNav">
         <div class="container-fluid navMargin">
           <a class="navbar-brand marginLogo">
-            <img src="logos/Logo2.png" width="60%" alt="logo">
+            <img src="Logos/Logo2.png" width="60%" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
     <section class="section">
         <div class="divVideo">
             <video muted autoplay loop>
-                <source src="video/Videofondo.webm" type="video/webm">
+                <source src="Video/Videofondo.webm" type="video/webm">
               </video>
         </div>
         
@@ -91,10 +91,10 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-4 iconosFooter">
-            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
-              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
-              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="iconos/telegram_icon_1319452.png" alt="telegram"></a>
-              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
+            <a class="icono nav-link m-3" href="https://www.youtube.com/" target="_blank"><img src="Iconos/YOUTUBE_icon-icons.com_65537.png" alt="Youtube"></a>
+              <a class="icono nav-link m-3 " href="https://www.instagram.com/" target="_blank"><img src="Iconos/INSTAGRAM_icon-icons.com_65535.png" alt="instagram"></a>
+              <a class="icono nav-link m-3" href="https://web.telegram.org/" target="_blank"><img src="Iconos/telegram_icon_1319452.png" alt="telegram"></a>
+              <a class="icono nav-link m-3" href="https://vimeo.com/" target="_blank"><img src="Iconos/VIMEO_icon-icons.com_65544.png" alt="vimeo"></a>
           </div>
         </div>
       </div>
